<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout android:id="@+id/main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.app.agnie.owl.OWLMain">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/AppToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat" />

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:layout_below="@id/toolbar">

            <me.grantland.widget.AutofitTextView
                android:id="@+id/owlmain_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_marginTop="@dimen/small_text_margin"
                android:textSize="40sp"
                android:padding="@dimen/small_text_margin"
                android:paddingBottom="10dp"
                android:maxLines="1"
                android:layout_alignParentTop="true"
                android:gravity="center_horizontal"
                android:text="@string/main_header" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_below="@id/owlmain_header"
                app:srcCompat="@drawable/ic_owl"
                android:contentDescription="@string/owl_description" />
        </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <LinearLayout
            android:id="@+id/main_linear_layout_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/main_dictionary_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_dictionary"
                android:onClick="enterDictionary"
                android:padding="@dimen/main_button_padding"
                android:gravity="bottom|center" />

            <Button
                android:id="@+id/main_lessons_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_lesson"
                android:onClick="enterLessons"
                android:padding="@dimen/main_button_padding"
                android:gravity="bottom|center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_linear_layout_top">

            <Button
                android:id="@+id/main_tests_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_test"
                android:onClick="enterTests"
                android:padding="@dimen/main_button_padding"
                android:gravity="bottom|center" />

            <Button
                android:id="@+id/main_favourites_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_favheart"
                android:onClick="enterFavourites"
                android:padding="@dimen/main_button_padding"
                android:gravity="bottom|center" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        app:headerLayout="@layout/nav_header"
        app:itemBackground="@drawable/drawer_item_background"
        app:itemIconTint="@color/drawer_item_text"
        app:itemTextColor="@color/drawer_item_text"
        app:menu="@menu/navigation_drawer" />
</android.support.v4.widget.DrawerLayout>