<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_border_beige_48dp"
        android:title="@string/dictionary_item_favourite"
        app:showAsAction="ifRoom" />

    <!-- Menu -->
    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/ic_menu_beige_48dp"
        android:title="@string/menu_detail"
        app:showAsAction="ifRoom" />

</menu>